--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "craco.config.js"],
-  "exclude": ["node_modules"]
+  "include": ["src", "craco.config.js"]
 }
