--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/public-sans": "^4.5.11",
     "@mui/icons-material": "^5.10.15",
+    "@mui/joy": "^5.0.0-alpha.56",
     "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
